Fixed leaflet-search z-index

--- a/src/assets/styles/plugins/leaflet.styl
+++ b/src/assets/styles/plugins/leaflet.styl
@@ -41,7 +41,7 @@
     position absolute
     top 10px
     left 50%
-    z-index 800
+    z-index 700
     transform translateX(-50%)
     width 100%
     min-width 150px
